Landing page UI completed

--- a/frontend/src/css/signup.module.css
+++ b/frontend/src/css/signup.module.css
@@ -3,6 +3,7 @@
   border: 1px solid black;
   height: 100vh;
   justify-content: space-between;
+  text-align: center;
 }
 .left {
   display: flex;
