--- a/frontend/src/css/home.module.css
+++ b/frontend/src/css/home.module.css
@@ -2,7 +2,6 @@
   padding: 0;
   display: flex;
   flex-direction: column;
- 
 }
 .slider {
   height: 400px;
@@ -58,57 +57,11 @@
   border-radius: 50%;
 }
 
-.products {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 3rem;
-  padding: 1rem;
-  width: 90%;
-  margin: auto;
-}
-.heading{
-  margin-left: 2rem;
-}
-.product {
-  position: relative;
-  /* border: 1px solid rgb(34, 187, 187); */
-  height: 300px;
-  text-align: center;
-}
-.prodimg > img {
-  width: 90%;
-  height: 200px;
-}
+/* bottomsection */
 
-.prodinfo {
-  position: absolute;
-  bottom: 0;
-  left: 16%;
-  width: 60%;
-  height: 150px;
-  text-align: left;
-  /* border: 1px solid rgb(34, 187, 187); */
-  background-color: white;
-  padding: 0 0.3rem 0 1rem;
-  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
-}
-.prodinfo > .desc {
-  color: grey;
-  margin-top: -15px;
-  font-size: 13px;
-}
-.prodinfo > .price {
-  color: rgb(34, 187, 187);
-  font-weight: bold;
-  margin-top: -5px;
-}
-.addtocart {
-  flex-basis: 1;
-  width: 90%;
-  background-color: rgb(34, 187, 187);
-  color: white;
-  text-align: center;
-  padding: 4px;
-  font-weight: 600;
-  margin-top: -5px;
+.bottomsection {
+  width: 85%;
+  margin: auto;
+  display: flex;
+  justify-content: flex-end;
 }
