--- a/frontend/src/css/navbar.module.css
+++ b/frontend/src/css/navbar.module.css
@@ -12,24 +12,24 @@
   border: none;
   background-color: rgb(34, 187, 187);
   color: white;
-  padding: 5px 25px;
+  font-weight: 600;
+  padding: 8px 25px;
   border-radius: 5px;
 }
 
 .carticon {
-  font-size: 1.5rem;
+  font-size: 2rem;
   color: rgb(34, 187, 187);
 }
 
 .cartdiv > span {
   position: relative;
-
-  padding: 0 3px;
+  padding: 3px 3px;
   font-size: x-small;
   background-color: rgb(10, 167, 62);
   border-radius: 50%;
-  left: -5px;
-  top: -15px;
+  left: -6px;
+  top: -20px;
   color: white;
 }
 /* right nav section */
@@ -39,21 +39,24 @@
 }
 /* profile */
 .profile {
-  width: 25px;
-  height: 25px;
+  width: 34px;
+  height: 35px;
 }
 .profile > select {
   position: relative;
-  top: -25px;
-  left: 3px;
+  top: -23px;
+  left: 8px;
   z-index: 1;
   background-color: rgba(251, 253, 255, 0);
-  width: 20px;
+  width: 18px;
+  height: 17px;
   color: rgba(255, 255, 255, 0);
   border: none;
+  font-size: 16px;
 }
 .profile > select > option {
   color: black;
+ 
 }
 .profile > img {
   width: 100%;
