--- a/frontend/src/css/signup.module.css
+++ b/frontend/src/css/signup.module.css
@@ -1,6 +1,7 @@
 .container {
+  
   display: flex;
-  /* border: 1px solid black; */
+  border: 1px solid lightgrey;
   height: 100vh;
   justify-content: space-between;
   text-align: center;
